--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "2.5.6",
-    "express": "4.15.2"
+    "body-parser": "1.18.3",
+    "cors": "2.8.4",
+    "express": "4.16.3"
   }
 }
